# financial-ops

./: CHANGELOG.md  LICENSE.md  README.md
crates/financial-ops/: Cargo.toml  README.md
crates/financial-ops/src/: lib.rs
crates/financial-ops/src/core/: error.rs  mod.rs
crates/financial-ops/src/core/checked/: checked_operations.rs  helper_traits.rs  impl_checked_arithmetic_macro.rs  mod.rs
crates/financial-ops/src/core/helpers/: mod.rs  pad_to_width.rs  to_string_decimals.rs
crates/financial-ops/src/core/unchecked/: mod.rs  operations.rs
